# demo-black-isort-formatting

./: README.md
.github/workflows/: pipeline.yml
app/: Makefile  README.md  main.py  pyproject.toml  requirements.txt
